--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "bootstrap": "lerna bootstrap --use-workspaces"
+  },
   "devDependencies": {
     "lerna": "^3.22.1"
   }
