--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "bootstrap": "lerna bootstrap --use-workspaces"
   },
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.5.0",
+    "lerna": "^3.22.1",
+    "prettier": "^2.2.1"
   }
 }
