--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,18 +1,22 @@
 {
   "name": "@ba/button",
   "version": "1.0.0",
-  "description": "> TODO: description",
+  "description": "A vue button component",
   "author": "bryanadamss <bryanadamss@foxmail.com>",
   "homepage": "https://github.com/BryanAdamss/monorepo-starter#readme",
   "license": "MIT",
-  "main": "dist/index.umd.min.js",
-  "module": "src/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "browser": "dist/index.umd.js",
+  "scripts": {
+    "build": "lerna exec -- rollup -c=../../rollup.config.js"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "dist"
   ],
   "publishConfig": {
     "registry": "https://registry.npm.taobao.org/"
@@ -20,9 +24,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BryanAdamss/monorepo-starter.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
     "url": "https://github.com/BryanAdamss/monorepo-starter/issues"
