--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -9,7 +9,7 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.umd.js",
   "scripts": {
-    "build": "lerna exec -- rollup -c=../../rollup.config.js"
+    "build": "lerna exec --scope @ba/button -- rollup -c=../../build/vue.js"
   },
   "directories": {
     "lib": "lib",
