--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,7 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.umd.js",
   "scripts": {
-    "build": "lerna exec -- rollup -c ../../rollup.config.js"
+    "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js"
   },
   "directories": {
     "lib": "lib",
