--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,1 @@
-{ "tabWidth": 2, "semi": false, "singleQuote": true }
+{ "tabWidth": 2, "semi": false, "singleQuote": true, "trailingComma": "none" }
