--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna run build --parallel",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "dev": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
@@ -17,9 +19,14 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@lerna/project": "^4.0.0",
     "@ls-lint/ls-lint": "^1.9.2",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/vue": "^6.1.21",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-standard": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.19.0",
@@ -42,6 +49,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.6",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
   "config": {
@@ -71,5 +80,6 @@
     "*": [
       "ls-lint"
     ]
-  }
+  },
+  "dependencies": {}
 }
