--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.6",
+    "stylelint": "^13.12.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-order": "^4.1.0",
+    "stylelint-selector-bem-pattern": "^2.1.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
@@ -70,7 +74,7 @@
       "git add"
     ],
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
+      "eslint --fix",
       "git add"
     ],
     "*.{sass,scss,vue,css,less,stylus}": [
