--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lerna/project": "^4.0.0",
     "@ls-lint/ls-lint": "^1.9.2",
     "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
     "@storybook/vue": "^6.1.21",
