--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "lerna run build --parallel",
     "commit": "git-cz",
     "dev": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --config test/unit/jest.config.js --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
     "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-env": "^7.13.12",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@lerna/project": "^4.0.0",
@@ -23,10 +24,14 @@
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
+    "@storybook/addon-storyshots": "^6.1.21",
     "@storybook/vue": "^6.1.21",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-standard": "^6.0.0",
+    "@vue/test-utils": "^1.1.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -39,6 +44,8 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.5.0",
     "husky": "^3.1.0",
+    "jest": "^26.6.3",
+    "jest-serializer-vue": "^2.0.2",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -55,6 +62,7 @@
     "stylelint-order": "^4.1.0",
     "stylelint-selector-bem-pattern": "^2.1.0",
     "vue": "^2.6.12",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
