chore(settings): 调整document this 配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
 
   "css.validate": false,
   "less.validate": false,
-  "scss.validate": false
+  "scss.validate": false,
+
+  "docthis.inferTypesFromNames": true,
+  "docthis.includeDateTag": true,
+  "docthis.dateTagFormat": "yyyy-mm-dd HH:MM:ss"
 }
