--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "lerna run build --parallel",
     "commit": "git-cz",
     "dev": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "doc:comp": "build-storybook -o ./docs/components",
+    "doc:lib": "jsdoc -r -c .jsdoc.json --verbose",
+    "doc": "yarn doc:lib && yarn doc:comp",
     "test": "jest --config test/unit/jest.config.js --coverage"
   },
   "devDependencies": {
@@ -47,8 +49,10 @@
     "husky": "^3.1.0",
     "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
+    "jsdoc": "^3.6.6",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
+    "minami": "^1.2.3",
     "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0",
