--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "commit": "git-cz",
     "dev": "start-storybook -p 6006",
     "doc:comp": "build-storybook -o ./docs/components",
-    "doc:lib": "jsdoc -r -c .jsdoc.json --verbose",
+    "doc:lib": "lerna run doc --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
     "test": "jest --config test/unit/jest.config.js --coverage"
   },
@@ -50,6 +50,7 @@
     "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
     "jsdoc": "^3.6.6",
+    "jsdoc-to-markdown": "^7.0.1",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
     "minami": "^1.2.3",
