--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,9 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.umd.js",
   "scripts": {
-    "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js"
+    "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js",
+    "predoc": "rm -rf ./stories/*",
+    "doc": "lerna exec --scope @ba/utils -- node ../../build/jsdoc2mdx.js"
   },
   "directories": {
     "lib": "lib",
