--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ba/utils",
+  "name": "@ba/hello",
   "version": "1.0.0",
-  "description": "tool methods",
+  "description": "hello methods",
   "author": "GuangHui <bryanadamss@foxmail.com>",
   "homepage": "https://github.com/BryanAdamss/monorepo-starter#readme",
   "license": "MIT",
@@ -9,9 +9,9 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.umd.js",
   "scripts": {
-    "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js",
+    "build": "lerna exec --scope @ba/hello -- rollup -c ../../build/base.js",
     "prejsdoc2mdx": "rm -rf ./stories/*",
-    "jsdoc2mdx": "lerna exec --scope @ba/utils -- node ../../build/jsdoc2mdx.js"
+    "jsdoc2mdx": "lerna exec --scope @ba/hello -- node ../../build/jsdoc2mdx.js"
   },
   "directories": {
     "lib": "lib",
