chore(doc): 自定义storybook ui

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -19,3 +19,16 @@ ls:
     .woff: kebab-case
     .woff2: kebab-case
     .html: kebab-case
+  packages/**/dist:
+    .js: regex:.+
+  packages/**/stories:
+    .js: regex:.+
+  packages/**/__tests__:
+    .js: regex:.+
+
+ignore:
+  - node_modules
+  - .git
+  - .circleci
+  - .github
+  - .vscode
