--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "lerna run build --parallel",
     "commit": "git-cz",
     "predev": "yarn doc:lib",
-    "dev": "start-storybook -p 6006",
+    "dev": "start-storybook -p 6006 --no-manager-cache",
     "doc:comp": "build-storybook -o ./docs-static",
     "doc:lib": "lerna run jsdoc2mdx --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
@@ -29,6 +29,8 @@
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
+    "@storybook/theming": "^6.2.9",
     "@storybook/vue": "^6.2.9",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-standard": "^6.0.0",
