--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,11 @@
   "packages": ["packages/*"],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "ignoreChanges": ["**/*.md"],
+  "command": {
+    "version": {
+      "conventionalCommits": true
+    }
+  }
 }
