--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,9 +5,11 @@
   "author": "GuangHui <bryanadamss@foxmail.com>",
   "homepage": "https://github.com/BryanAdamss/monorepo-starter#readme",
   "license": "MIT",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "browser": "dist/index.umd.js",
+  "main": "./dist/index.cjs.js",
+  "exports": "./dist/index.modern.js",
+  "module": "./dist/index.es.js",
+  "browser": "./dist/index.umd.js",
+  "unpkg": "./dist/index.umd.js",
   "scripts": {
     "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js",
     "prejsdoc2mdx": "rm -rf ./stories/*",
