--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "root",
   "private": true,
   "description": "A monorepo starter for UI components. Use lerna,yarn workspaces, rollup, storybook etc.",
-  "author": "GuangHui <bryanadamss@foxmail.com>",
+  "author": {
+    "name": "GuangHui",
+    "email": "bryanadamss@foxmail.com",
+    "url": "https://github.com/BryanAdamss"
+  },
   "workspaces": [
     "packages/*"
   ],
@@ -15,7 +19,9 @@
     "doc:comp": "build-storybook -o ./docs-static",
     "doc:lib": "lerna run jsdoc2mdx --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
-    "test": "jest --config test/unit/jest.config.js --coverage"
+    "test": "jest --config test/unit/jest.config.js --coverage",
+    "new:comp": "node build/bin/new-comp.js",
+    "new:lib": "node build/bin/new-lib.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
@@ -40,6 +46,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "commitizen": "^4.2.3",
+    "css-loader": "^5.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.19.0",
     "eslint-plugin-import": "^2.22.1",
@@ -49,14 +56,17 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.5.0",
+    "file-save": "^0.2.0",
     "husky": "^3.1.0",
     "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
     "jsdoc": "^3.6.6",
     "jsdoc-to-markdown": "^7.0.1",
+    "json-templater": "^1.2.0",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
     "minami": "^1.2.3",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0",
@@ -66,10 +76,13 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.6",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-order": "^4.1.0",
     "stylelint-selector-bem-pattern": "^2.1.0",
+    "uppercamelcase": "^3.0.0",
     "vue": "^2.6.12",
     "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.6",
