--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
   "command": {
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): publish %s"
+      "message": "chore(release): publish"
     }
   }
 }
