--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,8 @@
   "command": {
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): publish"
+      "message": "chore(release): publish",
+      "allowBranch": ["main", "master"]
     }
   }
 }
