--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,8 @@
     "version": {
       "conventionalCommits": true,
       "message": "chore(release): publish",
-      "allowBranch": ["main", "master"]
+      "allowBranch": ["main", "master"],
+      "noCommitHooks": true
     }
   }
 }
