chore(pkg): 添加查看包及包依赖脚本

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "doc": "yarn doc:lib && yarn doc:comp",
     "test": "jest --config test/unit/jest.config.js --coverage",
     "new:comp": "node build/bin/new-comp.js",
-    "new:lib": "node build/bin/new-lib.js"
+    "new:lib": "node build/bin/new-lib.js",
+    "pkgs": "lerna ls -pla",
+    "pkgs:deps": "lerna ls --graph"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
