--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -25,6 +25,7 @@
     "dist"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "repository": {
