--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.6",
     "sass-loader": "^10.1.1",
+    "shx": "^0.3.3",
     "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-rational-order": "^0.1.2",
