--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,7 +16,7 @@
   "unpkg": "./dist/index.umd.js",
   "scripts": {
     "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js",
-    "prejsdoc2mdx": "rm -rf ./stories/*",
+    "prejsdoc2mdx": "shx rm -rf ./stories/*",
     "jsdoc2mdx": "lerna exec --scope @ba/utils -- node ../../build/jsdoc2mdx.js"
   },
   "directories": {
