--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "json-templater": "^1.2.0",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
+    "lodash": "^4.17.21",
     "minami": "^1.2.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
