--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -37,5 +37,8 @@
   },
   "bugs": {
     "url": "https://github.com/BryanAdamss/monorepo-starter/issues"
+  },
+  "dependencies": {
+    "@ba/utils": "^1.1.0"
   }
 }
