chore(project): 新增public目录

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "lerna run build --parallel",
     "commit": "git-cz",
     "predev": "yarn doc:lib",
-    "dev": "start-storybook -p 6006 --no-manager-cache",
-    "doc:comp": "build-storybook -o ./docs-static",
+    "dev": "start-storybook -p 7007 -s public --no-manager-cache",
+    "doc:comp": "build-storybook -s public -o ./docs-static",
     "doc:lib": "lerna run jsdoc2mdx --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
     "test": "jest --config test/unit/jest.config.js --coverage",
