chore(project): 新增开发环境监听lib变化监听能力

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build": "lerna run build --parallel",
     "commit": "git-cz",
     "predev": "yarn doc:lib",
-    "dev": "start-storybook -p 7007 -s public --no-manager-cache",
+    "dev:comp": "start-storybook -p 7007 -s public --no-manager-cache",
+    "dev:lib": "node build/bin/dev-lib.js",
+    "dev": "concurrently --raw \"yarn dev:comp\" \"yarn dev:lib\"",
     "doc:comp": "build-storybook -s public -o ./docs-static",
     "doc:lib": "lerna run jsdoc2mdx --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
@@ -48,7 +50,9 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "chokidar": "^3.5.1",
     "commitizen": "^4.2.3",
+    "concurrently": "^6.2.0",
     "css-loader": "^5.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.19.0",
