chore(config): 支持svg优化、svg sprite

--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-order": "^4.1.0",
     "stylelint-selector-bem-pattern": "^2.1.0",
+    "svg-sprite-loader": "^6.0.6",
+    "svgo": "^2.3.0",
+    "svgo-loader": "^3.0.0",
     "uppercamelcase": "^3.0.0",
     "vue": "^2.6.12",
     "vue-jest": "^3.0.7",
