chore(svg): 优化svg命令逻辑

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "predev": "yarn doc:lib",
     "dev:comp": "start-storybook -p 7007 -s public --no-manager-cache",
     "dev:lib": "node build/bin/dev-lib.js",
-    "dev": "concurrently --raw \"yarn dev:comp\" \"yarn dev:lib\"",
+    "dev:svg": "node build/bin/dev-svg.js",
+    "dev": "concurrently --raw \"yarn dev:comp\" \"yarn dev:lib\" \"yarn dev:svg\"",
     "doc:comp": "build-storybook -s public -o ./docs-static",
     "doc:lib": "lerna run jsdoc2mdx --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
