chore(pkg): 调整svg发布时需暴露的文件

--- a/packages/svg-assets/package.json
+++ b/packages/svg-assets/package.json
@@ -28,7 +28,8 @@
     "test": "__tests__"
   },
   "files": [
-    "dist"
+    "dist",
+    "assets"
   ],
   "publishConfig": {
     "access": "public",
