chore(script): 优化new命令逻辑

--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "doc:lib": "lerna run jsdoc2mdx --parallel",
     "doc": "yarn doc:lib && yarn doc:comp",
     "test": "jest --config test/unit/jest.config.js --coverage",
-    "new:comp": "node build/bin/new-comp.js",
-    "new:lib": "node build/bin/new-lib.js",
-    "new:assets": "node build/bin/new-assets.js",
+    "new": "node build/bin/new.js",
     "pkgs": "lerna ls -pla",
     "pkgs:deps": "lerna ls --graph",
     "prepublishOnly": "yarn build"
