chore(script): 优化script名称

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -19,7 +19,7 @@
   "browser": "./dist/index.umd.js",
   "unpkg": "./dist/index.umd.js",
   "scripts": {
-    "build": "lerna exec --scope @ba/button -- rollup -c=../../build/vue.js"
+    "build": "lerna exec --scope @ba/button -- rollup -c=../../build/comp.js"
   },
   "directories": {
     "lib": "lib",
