--- a/packages/svg-assets/package.json
+++ b/packages/svg-assets/package.json
@@ -20,7 +20,7 @@
   "unpkg": "./dist/index.umd.js",
   "scripts": {
     "prebuild": "yarn copy:svgs",
-    "build": "lerna exec --scope @ba/svg-assets -- rollup -c ../../build/base.js",
+    "build": "lerna exec --scope @ba/svg-assets -- rollup -c ../../build/lib.js",
     "precopy:svgs": "shx rm -rf assets/*",
     "copy:svgs": "node ../../build/bin/copy-svgs.js"
   },
