--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,7 +19,7 @@
   "browser": "./dist/index.umd.js",
   "unpkg": "./dist/index.umd.js",
   "scripts": {
-    "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/base.js",
+    "build": "lerna exec --scope @ba/utils -- rollup -c ../../build/lib.js",
     "jsdoc2mdx": "lerna exec --scope @ba/utils -- node ../../build/bin/jsdoc2mdx.js"
   },
   "directories": {
