--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "lerna run build --parallel --since",
+    "build": "lerna run build --parallel",
+    "build:since": "lerna run build --parallel --since",
     "commit": "git-cz",
     "predev": "yarn doc:lib",
     "dev:comp": "start-storybook -p 7007 -s public --no-manager-cache",
@@ -20,8 +21,10 @@
     "dev:svg": "node build/bin/dev-svg.js",
     "dev": "concurrently --raw \"yarn dev:comp\" \"yarn dev:lib\" \"yarn dev:svg\"",
     "doc:comp": "build-storybook -s public -o ./docs-static",
-    "doc:lib": "lerna run jsdoc2mdx --parallel --since",
+    "doc:lib": "lerna run jsdoc2mdx --parallel",
+    "doc:lib:since": "lerna run jsdoc2mdx --parallel --since",
     "doc": "yarn doc:lib && yarn doc:comp",
+    "doc:since": "yarn doc:lib:since && yarn doc:comp:since",
     "test": "jest --config test/unit/jest.config.js --coverage",
     "new": "node build/bin/new.js",
     "pkgs": "lerna ls -pla",
@@ -75,7 +78,6 @@
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "minami": "^1.2.3",
-    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0",
@@ -85,7 +87,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.6",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.35.0",
+    "sass-loader": "^10.2.0",
     "shx": "^0.3.3",
     "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
