--- a/package.json
+++ b/package.json
@@ -78,14 +78,15 @@
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "minami": "^1.2.3",
+    "postcss": "^8.3.4",
     "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-banner": "^0.2.1",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-img": "^1.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.6",
     "sass": "^1.35.0",
