--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "lodash": "^4.17.21",
     "minami": "^1.2.3",
     "postcss": "^8.3.4",
+    "postcss-import": "^14.0.2",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0",
@@ -106,7 +108,6 @@
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
-  "dependencies": {},
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
