--- a/components.json
+++ b/components.json
@@ -2,21 +2,25 @@
   "button": {
     "type": "comp",
     "path": "./packages/button",
-    "version": "1.1.1"
+    "version": "1.1.1",
+    "cnName": "按钮"
   },
   "hello": {
     "type": "lib",
     "path": "./packages/hello",
-    "version": "1.1.1"
+    "version": "1.1.1",
+    "cnName": "问候"
   },
   "svg-assets": {
     "type": "assets",
     "path": "./packages/svg-assets",
-    "version": "1.1.0"
+    "version": "1.1.0",
+    "cnName": "svg 资源包"
   },
   "utils": {
     "type": "lib",
     "path": "./packages/utils",
-    "version": "1.1.1"
+    "version": "1.1.1",
+    "cnName": "工具方法"
   }
 }
