--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.2.9",
     "@storybook/theming": "^6.2.9",
     "@storybook/vue": "^6.2.9",
