--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,7 @@
-{ "tabWidth": 2, "semi": false, "singleQuote": true, "trailingComma": "none" }
+{
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "arrowParens": "avoid"
+}
