--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.13",
+    "@babel/core": "^7.16.7",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@lerna/project": "^4.0.0",
@@ -77,6 +78,7 @@
     "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
     "jsdoc": "^3.6.6",
+    "jsdoc-babel": "^0.5.0",
     "jsdoc-to-markdown": "^7.0.1",
     "json-templater": "^1.2.0",
     "lerna": "^3.22.1",
@@ -109,6 +111,7 @@
     "svg-sprite-loader": "^6.0.6",
     "svgo": "^2.3.0",
     "svgo-loader": "^3.0.0",
+    "typescript": "^4.5.4",
     "uppercamelcase": "^3.0.0",
     "vue": "^2.6.12",
     "vue-jest": "^3.0.7",
